@@ -42,6 +42,7 @@ ZBX_METRIC	parameters_specific[] =
 
 	{"system.cpu.num",	CF_HAVEPARAMS,	SYSTEM_CPU_NUM,		"online"},
 	{"system.cpu.load",	CF_HAVEPARAMS,	SYSTEM_CPU_LOAD,	"all,avg1"},
+	{"system.cpu.discovery",0,		SYSTEM_CPU_DISCOVERY,	NULL},
 
 	{"system.uname",	0,		SYSTEM_UNAME,		NULL},
 
